# INDI-Nyx-Bridge

./: .gitignore  CMakeLists.txt  README.md  prepare.py  sonar-project.properties
.github/workflows/: deploy.yml
cmake_modules/: FindINDI.cmake
src/: bridge.c  bridge.h  indi_nyx_driver.cpp  indi_nyx_driver.hpp  logger.cpp  memory.c  port_finder.c  string_builder.c  transform_json_to_xml.c  transform_xml_to_json.c
